# nflsim

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject 2.toml  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  data.yaml  model.yaml  simulate.yaml
configs/seasons/: 2025.yaml
data/: nflsim.duckdb
docs/: data_schemas.md  index.md  models.md  ops.md  pipelines.md  simulator.md
src/nflsim/: __init__.py  cli.py  logging.py  settings.py
src/nflsim/checks/: schemas.py  validate.py
src/nflsim/data/: ingest_fastR.py  ingest_participation.py  normalize.py  scrape_inactives.py  scrape_nfl_injuries.py  scrape_ourlads.py  scrape_pfr_defense.py
src/nflsim/features/: pressure_fronts.py  target_share.py  unit_ratings.py  weather.py  xpass_proe.py
src/nflsim/ids/: keys.py  map_players.py
src/nflsim/io/: catalog.py  duck.py  parquet.py  paths.py
src/nflsim/models/: calibrate.py  drive_outcomes.py  playcall.py  pressure.py  rating.py  sim.py  targets.py
src/nflsim/pipelines/: build_data.py  build_features.py  build_features_defense.py  build_panel.py
src/nflsim/utils/: metrics.py  rng.py  time.py
tests/: test_defense_features_shape.py  test_import.py  test_join_participation_pbp.py  test_panel_shape.py  test_participation_schema.py
tests/data/: golden_participation_2024.parquet
