[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nflsim"
version = "0.0.1"
description = "State-of-the-art NFL game simulator skeleton"
authors = [{ name = "You" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16.0",
      "nfl-data-py>=0.3",
  "duckdb>=1.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "typer>=0.12",
  "pydantic>=2.7",
      "pydantic-settings>=2.1",
  "pandera>=0.20",
  "mkdocs-material>=9.5",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pre-commit>=3.7", "mypy>=1.10", "ruff>=0.6", "black>=24.8"]

[project.scripts]
nflsim = "nflsim.cli:app"

[tool.setuptools.package-data]
nflsim = ["py.typed"]

[tool.ruff]
line-length = 100
exclude = [".venv", "data", "build", "dist", ".git", "site-packages"]

[tool.ruff.lint]
select = ["E","F","W","I","UP","B"]
ignore = ["ISC001"]
